FIXED: Content gets hidden on mobile's landscape mode

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,6 +1,5 @@
 #About {
   width: 100%;
-  height: 100vh;
 }
 .about-content {
   width: 100%;
