--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,5 +1,5 @@
 .hero {
-  height: 100vh;
+  height: 100vmax;
   display: flex;
   align-items: center;
   justify-content: start;
